UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/AssetStagingJSONMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AssetStagingJSONMapping</label>
</CustomObject>