UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/fields/API_Label__c.field-meta.xml
<CustomField>
    <fullName>API_Label__c</fullName>
    <label>API Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>