UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/fields/AttributeCode__c.field-meta.xml
<CustomField>
    <fullName>AttributeCode__c</fullName>
    <label>AttributeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>