UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/fields/EVPL_A__c.field-meta.xml
<CustomField>
    <fullName>EVPL_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVPL-A</label>
    <type>Checkbox</type>
</CustomField>