UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/fields/Managed_Router_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Managed_Router_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed_Router_Applicable</label>
    <type>Checkbox</type>
</CustomField>