UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/fields/StagingField__c.field-meta.xml
<CustomField>
    <fullName>StagingField__c</fullName>
    <label>StagingField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>