UCF-APR2.4/ftr main/force-app/main/default/objects/AssetStagingJSONMapping__c/fields/UNI_Applicable__c.field-meta.xml
<CustomField>
    <fullName>UNI_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UNI Applicable</label>
    <type>Checkbox</type>
</CustomField>